--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.0.0-RC1'
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
@@ -41,6 +42,8 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup:javapoet:1.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.0.0-RC1'
+    compile 'org.jsoup:jsoup:1.8.3'
     compile 'ckm.simple:simple_sql_provider_annotation:1.0.6'
     compile 'ckm.simple:simple_sql_provider_processor:1.0.6'
 }
