--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 
     compile 'com.google.android.gms:play-services-cast:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup:javapoet:1.2.0'
