--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url 'https://raw.githubusercontent.com/felixb/mvn-repo/master'
+    }
+    jcenter()
+}
+
 dependencies {
     testCompile 'junit:junit:4.12'
 
@@ -48,4 +55,5 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'ckm.simple:simple_sql_provider_annotation:1.0.6'
     compile 'ckm.simple:simple_sql_provider_processor:1.0.6'
+    compile 'de.ub0r.android.eucookieconsent:library:0.2.0@aar'
 }
