--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,20 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
 
     defaultConfig {
         applicationId "de.ub0r.android.basscast"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "0.1"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -19,40 +23,40 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    packagingOptions {
-        exclude 'META-INF/services/javax.annotation.processing.Processor' // butterknife
-    }
 }
 
 repositories {
     maven {
         url 'https://raw.githubusercontent.com/felixb/mvn-repo/master'
     }
-    jcenter()
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
 
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.0.0-RC1'
-    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'org.mockito:mockito-core:2.13.0'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:mediarouter-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:mediarouter-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 
-    compile 'com.google.android.gms:play-services-cast:11.0.4'
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    compile 'com.google.android.gms:play-services-cast:11.8.0'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
 
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup:javapoet:1.2.0'
-    compile 'com.squareup.okhttp3:okhttp:3.0.0-RC1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'com.squareup:javapoet:1.9.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'org.jsoup:jsoup:1.8.3'
-    compile 'ckm.simple:simple_sql_provider_annotation:1.0.6'
-    compile 'ckm.simple:simple_sql_provider_processor:1.0.6'
     compile 'de.ub0r.android.eucookieconsent:library:0.2.0@aar'
+
+    implementation "android.arch.lifecycle:livedata:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
