--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile 'com.android.support:mediarouter-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
 
-    compile 'com.google.android.gms:play-services-cast:11.8.0'
+    compile 'com.google.android.gms:play-services-cast-framework:11.8.0'
     compile 'com.google.android.gms:play-services-ads:11.8.0'
 
     compile 'com.jakewharton:butterknife:8.8.1'
