--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:name="android.hardware.nfc"
         android:required="false" />
 
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -54,6 +58,17 @@
         <activity
             android:name=".AboutActivity"
             android:parentActivityName=".BrowseActivity" />
+
+        <activity
+            android:name=".ExpandedControlsActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.ub0r.android.basscast.BrowseActivity" />
+        </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
