--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "de.ub0r.android.basscast"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "0.1"
 
@@ -32,31 +32,31 @@ repositories {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
-    androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.0.0-RC1'
-    androidTestCompile 'org.mockito:mockito-core:2.13.0'
-    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
-    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.0.0-RC1'
+    androidTestImplementation 'org.mockito:mockito-core:2.13.0'
+    androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
+    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
 
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:mediarouter-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:mediarouter-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-    compile 'com.google.android.gms:play-services-cast-framework:11.8.0'
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.android.gms:play-services-cast-framework:15.0.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile 'com.squareup:javapoet:1.9.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'org.jsoup:jsoup:1.8.3'
-    compile 'de.ub0r.android.eucookieconsent:library:0.2.0@aar'
+    implementation 'com.squareup:javapoet:1.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'org.jsoup:jsoup:1.8.3'
+    implementation 'de.ub0r.android.eucookieconsent:library:0.2.0@aar'
 
-    implementation "android.arch.lifecycle:livedata:1.1.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.lifecycle:livedata:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
